Neues Design, Ablaufdatum für Pakete

--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -59,30 +59,43 @@ typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine g\u00fcltige Zah
 #link
 back.link=Zur\u00fcck
 
+#title
+app.title.text=\'Don\'t Forget Your Food Supplies\'
+html.title.text=Willkommen zu \'Don\'t Forget Your Food Supplies\'
+
 # home
-home.welcome.text=Willkommen zu \'Don\'t Forget Your Food Supplies\'
-home.searchfield.label=Vorr\u00e4te durchsuchen
+home.text=Startseite
+home.welcome.text=Willkommen
+home.welcome.back.text=Willkommen zur\u00fcck {0}
 
 # search
-search.label=Suche
+search.label.text=Suche
+search.searchfield.label.text=Vorr\u00e4te durchsuchen
+
+# supply
+supply.amount.text=Es sind {0} \"{1}\" im System.
+supply.expired.text=Die folgenden Vorr\u00e4te sind inzwischen abgelaufen:
 
 # entity
-entity.manage=Einheiten verwalten (Gramm, Kilo, St\u00fcck, etc.)
+entity.manage.text=Einheiten verwalten (Gramm, Kilo, St\u00fcck, etc.)
 
 # foodCategory
-foodCategory.manage=Lebensmittelkategorien verwalten (Fleisch, Kuchen, Fisch, etc.)
+foodCategory.manage.text=Lebensmittelkategorien verwalten (Fleisch, Kuchen, Fisch, etc.)
 
 # paket
-paket.amount.label=Anzahl
-paket.foodCategory.label=Kategorie
-paket.entity.label=Einheit
+paket.amount.label.text=Anzahl
+paket.foodCategory.label.text=Kategorie
+paket.entity.label.text=Einheit
+paket.expiring.years.text=Jahre
+paket.expiring.months.text=Monate
+paket.expiring.noselection.text=Ausw\u00e4hlen
 
 # suessie
-suessie.amount.label=Anzahl
+suessie.amount.label.text=Anzahl
 
 # fixFuer
-fixFuer.amount.label=Anzahl
+fixFuer.amount.label.text=Anzahl
 
 # job
-mail.subject=Du hast abgelaufene Vorr\u00e4te!
-mail.body=Die folgenden Vorr\u00e4te sind abgelaufen: {0}
+mail.subject.text=Du hast abgelaufene Vorr\u00e4te!
+mail.body.text=Die folgenden Vorr\u00e4te sind abgelaufen: {0}
