--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -93,6 +93,9 @@ paket.expiring.noselection.text=Ausw\u00e4hlen
 # suessie
 suessie.amount.label.text=Anzahl
 
+# setting
+setting.label=Einstellungen
+
 # fixFuer
 fixFuer.amount.label.text=Anzahl
 
