--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -66,7 +66,7 @@ html.title.text=Willkommen zu \'Don\'t Forget Your Food Supplies\'
 # home
 home.text=Startseite
 home.welcome.text=Willkommen
-home.welcome.back.text=Willkommen zur\u00fcck {0}
+home.welcome.back.text=Willkommen zur\u00fcck \"{0} {1}\"
 
 # search
 search.label.text=Suche
